--- a/src/main/webapp/js/tickets/editor/editor.html
+++ b/src/main/webapp/js/tickets/editor/editor.html
@@ -1,5 +1,6 @@
-<div class="container editor">
-    <div class="row">
+<div class="container editor" ng-init="vm.init()">
+
+    <div class="row" ng-if="!vm.ticket['nId']">
         <div class="col-xs-2">
             <a style="width: 120px;" class="btn btn-success" ng-href="/">Ticket List</a>
         </div>
@@ -7,14 +8,16 @@
             <h3 style="line-height: 34px; margin: 0;">Create new Ticket</h3>
         </div>
     </div>
-    <!--<div class="row">-->
-        <!--<div class="col-xs-2">-->
-            <!--<button style="width: 120px;" class="btn btn-success">Ticket Overview</button>-->
-        <!--</div>-->
-        <!--<div class="col-xs-6">-->
-            <!--<h3 style="line-height: 34px; margin: 0;">Edit Ticket (2)</h3>-->
-        <!--</div>-->
-    <!--</div>-->
+
+    <div class="row" ng-if="vm.ticket['nId']">
+        <div class="col-xs-2">
+            <button style="width: 120px;" class="btn btn-success">Ticket Overview</button>
+        </div>
+        <div class="col-xs-6">
+            <h3 style="line-height: 34px; margin: 0;">Edit Ticket (2)</h3>
+        </div>
+    </div>
+
     <div class="col-xs-1"></div>
     <div class="col-xs-11">
         <br />
