--- a/src/main/webapp/js/tickets/overview/overview.html
+++ b/src/main/webapp/js/tickets/overview/overview.html
@@ -9,7 +9,10 @@
             <h3 style="line-height: 34px; margin: 0;">Ticket ({{vm.oTicket.nId}}) - {{vm.oTicket.sName}}</h3>
         </div>
         <div class="col-xs-2">
-            <button style="width: 160px;" class="btn btn-success">Edit</button>
+            <button style="width: 160px;"
+                    class="btn btn-success"
+                    ng-click="vm.goToEditor(vm.oTicket['nId'])"
+                    ng-if="vm.enableEditorPage(vm.oTicket)">Edit</button>
         </div>
     </div>
     <br />
@@ -17,7 +20,10 @@
         <div class="col-xs-3 text-right"><h5>Created on:</h5></div>
         <div class="col-xs-7"><h5>{{vm.oTicket.dCreatedOn}}</h5></div>
         <div class="col-xs-2">
-            <button style="width: 160px;" class="btn btn-success">Leave Feedback</button>
+            <button style="width: 160px;"
+                    class="btn btn-success"
+                    ng-if="vm.showLeaveFeedback()"
+                    ng-click="vm.leaveFeedback(vm.oTicket['nId'])">Leave Feedback</button>
         </div>
     </div>
     <div class="row">
@@ -112,8 +118,7 @@
     <div class="row" ng-if="!vm.bHistoryViewMode">
         <div class="col-xs-7">
             <textarea rows="3" cols="40" class="form-controls" ng-model="vm.sNewComment"></textarea>
-        </div>
-        <div class="col-xs-2">
+            <br />
             <button style="width: 160px;" class="btn" ng-click="vm.addComment(vm.oTicket.nId, vm.sNewComment)">Add Comment</button>
         </div>
     </div>
