--- a/src/main/webapp/js/tickets/overview/overview.html
+++ b/src/main/webapp/js/tickets/overview/overview.html
@@ -2,7 +2,7 @@
     <br />
     <div class="row">
         <div class="col-xs-1">
-            <button class="btn btn-success">Ticket List</button>
+            <a class="btn btn-success" ng-href="/list">Ticket List</a>
         </div>
         <div class="col-xs-1"></div>
         <div class="col-xs-8">
@@ -56,7 +56,11 @@
     </div>
     <div class="row">
         <div class="col-xs-3 text-right"><h5>Attachments:</h5></div>
-        <div class="col-xs-7"><h5></h5></div>
+        <div class="col-xs-7">
+            <h5 ng-repeat="file in vm.oTicket.afAttachments">
+                <span>{{file.sFileName}}</span><button ng-click="vm.downloadFile(file)">Download</button><br/>
+            </h5>
+        </div>
     </div>
     <div class="row">
         <div class="col-xs-3 text-right"><h5>Description:</h5></div>
@@ -79,7 +83,7 @@
                     ng-click="vm.changeViewMode()">Comments</button>
         </div>
     </div>
-    <a ng-click="vm.showFullList()"><h3>Show All</h3></a>
+    <a ng-click="vm.showFullList()"><h3 style="cursor: pointer">Show All</h3></a>
     <table class="table table-bordered" ng-if="vm.bHistoryViewMode">
         <thead>
         <tr>
