--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -21,14 +21,14 @@
                     <div class="row">
                         <div class="col-xs-4"><h4>User Name:</h4></div>
                         <div class="col-xs-8">
-                            <input type="email" class="form-control" id="username" name="username" required autofocus="autofocus"/>
+                            <input type="email" class="form-control" id="username" name="username" required maxlength="100" autofocus="autofocus"/>
                         </div>
                     </div>
                     <br />
                     <div class="row">
                         <div class="col-xs-4"><h4>Password:</h4></div>
                         <div class="col-xs-8">
-                            <input type="password" class="form-control" id="password" name="password" required />
+                            <input type="password" class="form-control" id="password" name="password" maxlength="20" required />
                         </div>
                     </div>
                     <br />
